--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
   "codeowners": ["@raulgbcr"],
   "config_flow": true,
   "dependencies": ["bluetooth"],
-  "documentation": "",
+  "documentation": "https://github.com/raulgbcr/lednetwf_ble",
   "iot_class": "local_polling",
-  "issue_tracker": "",
+  "issue_tracker": "https://github.com/raulgbcr/lednetwf_ble/issues",
   "requirements": ["bleak-retry-connector>=1.17.1","bleak>=0.17.0"],
   "version": "0.0.1",
   "integration_type": "device"
